tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/duplicate-key-table.stderr
TOML parse error at line 4, column 1
  |
4 | [fruit.type]
  | ^
invalid table header
duplicate key `type` in table `fruit`
